google maps implementation

--- a/app.json
+++ b/app.json
@@ -12,6 +12,12 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.lavindu17.ceylonbooking",
+      "config": {
+        "googleMaps": {
+          "apiKey": "GOOGLE_MAPS_ANDROID_KEY"
+        }
+      },
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
@@ -40,6 +46,10 @@
         }
       ]
     ],
+    "extra": {
+      "GOOGLE_MAPS_ANDROID_KEY": "GOOGLE_MAPS_ANDROID_KEY",
+      "GOOGLE_PLACES_WEB_KEY": "GOOGLE_PLACES_WEB_KEY"
+    },
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
